src/test/deca/syntax/valid/test_dir/added/parser/comments.deca
// Description:
//    test of comments
//
// Results:
//    test_lex --> no error, no token
//    test_synt --> no error, basic tree
//
// History:
//    created on 04/01/2022
