src/test/deca/syntax/invalid/parser/oracle/semicolon_forgotten2.deca
// Description:
//    test of different print typos
//
// Results:
//    test_pars --> error line 11
//
// History:
//    created on 04/01/2022

{
    ;;50
}
